# textual-term

./: .ci_check_marker  .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  Makefile  README.md  ci_shared.mk  pyproject.toml  shared-tool-config.toml
ci_tools/: __init__.py
docs/: README.md
scripts/: ci.sh
src/textual_term/: README.md  __init__.py  _emulator.py  _keys.py  _pty.py  _renderer.py  _screen.py  _widget.py
tests/: conftest.py  test_dsr.py  test_emulator.py  test_environment.py  test_keys.py  test_renderer.py  test_widget.py
