# =============================================================================
# Project Metadata
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textual-term"
version = "0.1.0"
description = "Terminal emulator widget for Textual with DSR support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mahrens917"},
]
dependencies = [
    "textual>=1.0.0",
    "pyte>=0.8.0",
    "rich>=14.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"], include = ["textual_term*"]}

# =============================================================================
# Repository-Specific Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
filter_files = true

[tool.deptry]
known_first_party = ["src", "textual_term"]
extend_exclude = ["ci_shared", "ci_tools"]

# =============================================================================
# Standardized Tool Configurations
# =============================================================================
# Source of truth: ci_shared/shared-tool-config.toml
# =============================================================================

[tool.bandit]
exclude_dirs = [
    "/vendor/",
    "/.venv/",
    "/venv/",
    "/artifacts/",
    "/trash/",
    "/models/",
    "/logs/",
    "/data/",
]
skips = [
    "B101",
    "B301",
    "B403",
    "B105",
    "B106",
    "B107",
    "B108",
    "B110",
    "B311",
    "B404",
    "B603",
    "B606",
    "B607",
    "B608",
]

[tool.coverage]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "*helpers/__init__.py",
    "*/_module_references.py",
    "*/_path_init.py",
    "*/ui.py",
    "*/ui_core/**/*.py",
    "*/textual_ui/**/*.py",
    "src/web.py",
    "*/web/routes/*.py",
    "*/web/services/data_provider.py",
    "*/web/services/rich_renderer_helpers/*.py",
    "*/simple_monitor_components/bootstrap.py",
    "*/simple_monitor_setup/services.py",
    "*/price_alert/service_helpers/runner.py",
    "*/price_alert/service_helpers/currency_monitor.py",
    "src/textual_term/_widget.py",
]

[tool.coverage.run]
omit = [
    "*/vendor/*",
    "*/__main__.py",
    "**/__init__.py",
    "tests/*",
    "*/tests/*",
    "*_test_*.py",
    "*/dependency_injector/*.pyx",
    "*/dependency_injector/**/*.pyx",
    "*/site-packages/*",
    "*helpers/__init__.py",
    "*/_module_references.py",
    "*/_path_init.py",
    "*/ui.py",
    "*/ui_core/**/*.py",
    "*/textual_ui/**/*.py",
    "src/web.py",
    "*/web/routes/*.py",
    "*/web/services/data_provider.py",
    "*/web/services/rich_renderer_helpers/*.py",
    "*/simple_monitor_components/bootstrap.py",
    "*/simple_monitor_setup/services.py",
    "*/price_alert/service_helpers/runner.py",
    "*/price_alert/service_helpers/currency_monitor.py",
    "src/textual_term/_widget.py",
]

[tool.pylint]

[tool.pylint.BASIC]
method-rgx = "([a-z_][a-z0-9_]*|visit_[A-Z][A-Za-z]*)"

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.insert(0, 'src'); sys.path.insert(0, 'tests')"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 7

[tool.pylint.design]
max-args = 8
max-attributes = 8
max-positional-arguments = 8

[tool.pylint.format]
max-line-length = 140

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "import-outside-toplevel",
    "protected-access",
    "unused-argument",
    "unnecessary-ellipsis",
    "try-except-raise",
    "broad-exception-caught",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "wrong-import-position",
    "duplicate-code",
    "cyclic-import",
    "too-many-instance-attributes",
    "no-member",
    "redefined-outer-name",
    "too-many-locals",
    "pointless-string-statement",
    "abstract-method",
    "no-name-in-module",
    "invalid-name",
    "no-else-raise",
    "no-else-return",
    "unnecessary-lambda",
    "raise-missing-from",
    "line-too-long",
    "implicit-str-concat",
    "unused-variable",
    "unused-import",
    "not-callable",
    "too-many-lines",
    "use-implicit-booleaness-not-comparison",
    "use-maxsplit-arg",
    "using-constant-test",
    "wrong-import-order",
    "assignment-from-no-return",
    "no-value-for-parameter",
    "invalid-overridden-method",
    "global-statement",
    "redefined-builtin",
]

[tool.pyright]
pythonVersion = "3.12"
reportArgumentType = "warning"
reportAssertAlwaysTrue = "warning"
reportAssignmentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallInDefaultInitializer = "none"
reportCallIssue = "warning"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "warning"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportIncompleteStub = "none"
reportIndexIssue = "warning"
reportInvalidStubStatement = "warning"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportOperatorIssue = "warning"
reportOptionalCall = "warning"
reportOptionalContextManager = "warning"
reportOptionalIterable = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportOptionalSubscript = "warning"
reportPrivateUsage = "none"
reportPropertyTypeMismatch = "warning"
reportReturnType = "warning"
reportSelfClsParameterName = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUninitializedInstanceVariable = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
typeCheckingMode = "basic"

[tool.pytest]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--tb=no",
    "--strict-markers",
    "--strict-config",
    "--durations=10",
    "--durations-min=0.1",
    "-rEw",
    "-p",
    "pytest_asyncio",
    "-p",
    "no:jaxtyping",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
consider_namespace_packages = true
env = [
    "PYTHONDONTWRITEBYTECODE=1",
    "REDIS_HOST=localhost",
    "REDIS_PORT=6379",
    "REDIS_DB=0",
    "REDIS_PASSWORD=",
    "REDIS_SSL=false",
    "REDIS_RETRY_ON_TIMEOUT=false",
    "REDIS_SOCKET_TIMEOUT=30",
    "REDIS_SOCKET_CONNECT_TIMEOUT=30",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:The optimal value found.*is close to the specified.*bound.*:UserWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
    "ignore::UserWarning:sklearn",
    "ignore::FutureWarning:sklearn",
    "ignore::FutureWarning",
]
junit_duration_report = "total"
junit_family = "xunit2"
markers = [
    "unit: Unit tests - fast, isolated tests (< 1 second each)",
    "integration: Integration tests - test component interactions (< 15 seconds each)",
    "e2e: End-to-end tests - full system tests (< 2 minutes each)",
    "slow: Tests that take longer to run (> 1 second)",
    "fast: Fast running tests (< 1 second)",
    "pdf: PDF processing related tests",
    "redis: Tests requiring Redis connection",
    "external: Tests requiring external services",
    "performance: Performance-critical tests with timing requirements",
    "parallel_safe: Tests explicitly verified safe for parallel execution (unused in sequential mode)",
    "sequential_only: Tests that must run sequentially (now default behavior)",
    "cache_population: Tests that populate cache for other tests (run first)",
    "multi_currency: Tests that use both BTC and ETH data",
    "btc_specific: Tests specific to BTC currency",
    "eth_specific: Tests specific to ETH currency",
    "cache_dependent: Tests that benefit from populated cache (run after cache population)",
    "pnl: PnL (Profit and Loss) system related tests",
    "slowpdf: Deterministic PDF performance regression tests",
]
norecursedirs = [
    "tests/manual",
]
python_classes = [
    "Test*",
]
python_files = [
    "test_*.py",
]
python_functions = [
    "test_*",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
timeout = 30
timeout_method = "thread"

[tool.ruff]
extend-exclude = [
    "ci_tools/vendor",
]

[tool.ruff.lint]
ignore = [
    "TRY003",
]
select = [
    "TRY",
    "C90",
    "PLR",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "TRY002",
    "TRY203",
    "PLR2004",
]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 10
max-statements = 50
